# zero

./: .gitignore  Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: general.yml
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
