[package]
name = "zero"
version = "0.1.0"
authors = ["Edward Way <emtek995@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
mongodb = { version = "2.4.0", features = ["bson-uuid-1", "bson-chrono-0_4"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.16"
