[package]
name = "zero"
version = "0.1.0"
authors = ["Edward Way <emtek995@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.70"
config = "0.13.3"
mongodb = { version = "2.4.0", features = ["bson-uuid-1", "bson-chrono-0_4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4.2.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
claim = { path = "../rust-claim" }
reqwest = "0.11.16"
